syntax = "proto3";

package appointment;

message BusinessSkill {
  string id = 1; 
  string BusinessNodeId = 2;
  string Name = 3;
  string Description = 4;
  string DisplayPicture = 5;
  bool IsActive = 6;
  }

message BusinessSkillCreateModel {
  string BusinessNodeId = 1;
  string Name = 2;
  string Description = 3;
  string DisplayPicture = 4;
  bool IsActive = 5;
}

message BusinessSkillGetByIdModel {
    string id = 1; 
}

message BusinessSkillGetByIdResponse {
  string id = 1; 
  string BusinessNodeId = 2;
  string Name = 3;
  string Description = 4;
  string DisplayPicture = 5;
  bool IsActive = 6; 
}

message BusinessSkillCreateResponse {
  string id = 1; 
  string BusinessNodeId = 2;
  string Name = 3;
  string Description = 4;
  string DisplayPicture = 5;
  bool IsActive = 6;
}

message BusinessSkillUpdateModel {
  string id = 1; 
  string BusinessNodeId = 2;
  string Name = 3;
  string Description = 4;
  string DisplayPicture = 5;
  bool IsActive = 6;
}

message BusinessSkillUpdateResponse {
  string id = 1; 
  string BusinessNodeId = 2;
  string Name = 3;
  string Description = 4;
  string DisplayPicture = 5;
  bool IsActive = 6;
}

message BusinessSkillSearchModel {
  string businessNodeId = 1;
  string name = 2;
  bool isActive = 3;
}

message BusinessSkillSearchResponse {
  string id = 1; 
  string BusinessNodeId = 2;
  string Name = 3;
  string Description = 4;
  string DisplayPicture = 5;
  bool IsActive = 6;
}

message BusinessSkillDeleteModel {
    string id = 1;
}

  message BusinessSkillDeleteResponse {
    string id = 1;
}

service BusinessSkills {
    rpc Create(BusinessSkillCreateModel) returns (BusinessSkillCreateResponse);
    rpc GetById(BusinessSkillGetByIdModel) returns (BusinessSkillGetByIdResponse) {};
    rpc Search(BusinessSkillSearchModel) returns (BusinessSkillSearchResponse) {};
    rpc Update(BusinessSkillUpdateModel) returns (BusinessSkillUpdateResponse) {};
    rpc Delete(BusinessSkillDeleteModel) returns (BusinessSkillDeleteResponse) {};

}